# liquid_vapor_database

./: .gitignore  LICENSE  README.md  column_names_detector.py  custom_config.txt  extract_tables.ipynb  extracted_text.txt  histogram_data.csv  pdf_image_extractor.py  pdf_page_processor.py  processing_text.ipynb  pyproject.toml
docs/: db_funcs.ipynb  extract_tables.ipynb  extract_tables.py  histogram_data.csv  output_text.txt  page_df.csv  processing_text.ipynb  some_csv.csv
extracted_images/: extracted_text.txt
pdf_data/page_132/: 132_text.txt
pdf_data/page_133/: 133_text.txt  text.txt
pdf_data/page_134/: 134_text.txt
pdf_data/page_135/: text.txt
pdf_data/page_136/: values.csv
pdf_data/page_137/: text.txt
pdf_data/page_138/: text.txt
pdf_data/page_145/: 145_text.txt
pdf_data/page_148/: 148_text.txt  148_text_modified.txt
pdf_data/page_162/: text.txt
pdf_data/page_163/: text.txt
pdf_data/page_169/: 169_text.txt
pdf_data/page_170/: 170_text.txt
pdf_data/page_178/: text.txt
pdf_data/page_196/: 196_text.txt
pdf_data/page_211/: text.txt
pdf_data/page_221/: text.txt
pdf_data/page_254/: 254_text.txt
pdf_data/page_318/: values.csv
src/: column_names_detector.py  column_values_detector.py  cropped_tables.py  database_operations.py  group_grouper.py  logger_config.py  models.py  page_data.py  pdf_image_extractor.py  pdf_page_processor.py  table_gridlines.py
tests/: test_quaed.py  test_region.py
tests/assets/: 129_df.csv  130_df.csv  131_df.csv  132_df.csv  133_df.csv  134_df.csv  135_df.csv  136_df.csv  137_df.csv  138_df.csv  (+115 more)
(+1 files in other folders)
