[tool.poetry]
name = "liquid-vapor-database"
version = "0.1.0"
description = ""
authors = ["kdavjd <105581554+kdavjd@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"
pymupdf = "^1.23.8"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
